--- a/TOXIN.html
+++ b/TOXIN.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/home-hage/footer.css">
-    <link rel="stylesheet" href="css/home-hage/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>TOXIN</title>
 </head>
 <body>
@@ -59,9 +60,52 @@
         </div>
     </header>
 
-    <main>
 
+
+
+
+
+
+
+
+    <main>
+        <div class="swiper__contaner">
+            <div class="swiper__wrapper">
+                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+            </div>
+            <button class="swiper__prev swiper__button">
+                <img class="expand" src="foto__nav/expand_more_left.png" alt="prev">
+            </button>
+            <button class="swiper__next swiper__button">
+                <img class="expand" src="foto__nav/expand_more_right.png" alt="next">
+            </button>
+            <div class="swiper__radio">
+                <div class="slide__dot active__dot"></div>
+                <div class="slide__dot"></div>
+                <div class="slide__dot"></div>
+                <div class="slide__dot"></div>
+            </div>
+        </div>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
         <div class="contaner__footer">
@@ -108,8 +152,6 @@
                         </div>
                     </form>
                 </div>
-               
-
             </div>
         </div>
         <div class="contaner__footer-footer">
@@ -129,5 +171,6 @@
             <!-- </div> -->
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
