--- a/TOXIN.html
+++ b/TOXIN.html
@@ -60,52 +60,61 @@
         </div>
     </header>
 
-
-
-
-
-
-
-
-
     <main>
-        <div class="swiper__contaner">
-            <div class="swiper__wrapper">
-                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
-                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
-                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
-                <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+        <div class="contaner__flex">
+            <div class="swiper__contaner">
+                <div class="swiper__wrapper">
+                    <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main.jpg" alt="foto">
+                </div>
+                <button class="swiper__prev swiper__button">
+                    <img class="expand" src="foto__nav/expand_more_left.png" alt="prev">
+                </button>
+                <button class="swiper__next swiper__button">
+                    <img class="expand" src="foto__nav/expand_more_right.png" alt="next">
+                </button>
+                <div class="swiper__radio">
+                    <div class="slide__dot active__dot"></div>
+                    <div class="slide__dot"></div>
+                    <div class="slide__dot"></div>
+                    <div class="slide__dot"></div>
+                </div>
+                <div class="swiper__text">
+                    <div class="swiper__inline">
+                        <span class="num">№ 840</span>
+                        <span class="sum">9 900₽ в сутки</span>
+                    </div>
+                    <br>
+                    <div class="swiper__inline-under">
+                        <span class="score">звездочки</span>
+                        <span class="comment">65 Отзывов</span>
+                    </div>
+                </div>
             </div>
-            <button class="swiper__prev swiper__button">
-                <img class="expand" src="foto__nav/expand_more_left.png" alt="prev">
-            </button>
-            <button class="swiper__next swiper__button">
-                <img class="expand" src="foto__nav/expand_more_right.png" alt="next">
-            </button>
-            <div class="swiper__radio">
-                <div class="slide__dot active__dot"></div>
-                <div class="slide__dot"></div>
-                <div class="slide__dot"></div>
-                <div class="slide__dot"></div>
+            <div class="swiper__contaner">
+                <div class="swiper__wrapper two-wrapper">
+                    <img class="slide" src="foto__nav/foto__room_main_2.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main_2.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main_2.jpg" alt="foto">
+                    <img class="slide" src="foto__nav/foto__room_main_2.jpg" alt="foto">
+                </div>
+                <button class="swiper__button swiper__prev two-prev">
+                    <img class="expand" src="foto__nav/expand_more_left.png" alt="prev">
+                </button>
+                <button class="swiper__button swiper__next two-next">
+                    <img class="expand" src="foto__nav/expand_more_right.png" alt="next">
+                </button>
+                <div class="swiper__radio">
+                    <div class="slide__dot-two active__dot-two"></div>
+                    <div class="slide__dot-two"></div>
+                    <div class="slide__dot-two"></div>
+                    <div class="slide__dot-two"></div>
+                </div>
             </div>
         </div>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer>
         <div class="contaner__footer">
